--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="http://35.244.243.47/favicon_2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sadi // Morishita</title>
+    <title>Sadi // Morishita Copia</title>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
   </head>
